# panso.se

./: .env.example  .gitignore  .pre-commit-config.yaml  1_Build_HTML.ps1  2_Build_Dockerfile.ps1  3_Push_Dockerfile.ps1  4_Update_Container.ps1  4_Update_Stack.ps1  CONTRIBUTING.md  Dockerfile  README.md  data_converters.py  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: docker-publish.yml  docker.yml  ruff.yml  test.yml  update_cloudflare_ip.yml
Docker/: Dockerfile  cf_real-ip.conf  nginx.conf
amd/: admin.py  apps.py  models.py  tests.py  views.py
amd/migrations/: 0001_initial.py  0002_alter_processor__1ku_pricing_and_more.py
amd/scraping/: processors.py
api/: .env.example  .gitignore  Cargo.toml  README.md  pyproject.toml  settings.py  urls.py  wsgi.py
api/api/: README.md  __init__.py  description.py  main.py  models.py  settings.py  urls.py
api/core/: README.md  __init__.py  admin.py  apps.py  urls.py  views.py
api/core/management/commands/: add_eans.py  add_sections.py  convert_timestamp_to_datetime.py  make_datetime_from_timestamp.py  rewrite_webhallen.py  scrape_sitemaps.py  scrape_webhallen.py
api/core/migrations/: 0001_initial.py  0002_webhallenproduct_and_more.py  0003_rename_is_fyndware_of_historicalwebhallenproduct_fyndware_of_and_more.py  0004_alter_historicalwebhallenproduct_average_rating_type_and_more.py  0005_alter_historicalwebhallenproduct_average_rating_type_and_more.py  0006_webhallensection_and_more.py  0007_sitemaparticle_sitemapcampaign_sitemapcampaignlist_and_more.py  0008_historicalsitemaparticle_priority_and_more.py  0009_alter_historicalsitemaparticle_options_and_more.py  0010_eans_historicaleans.py  0011_eans_list_of_webhallen_ids_with_ean_and_more.py
api/core/stores/webhallen/: models.py  tasks.py  urls.py  views.py
api/core/templates/core/: index.html
api/core/webhallen/: api.py  description.py  models.py  tasks.py  urls.py  views.py
api/src/: main.rs
api/webhallen/: apps.py  urls.py
api/webhallen/management/commands/: add_eans.py  rewrite_webhallen.py  scrape_sitemaps.py
core/: api.py  settings.py  urls.py
intel/: _product_ids.py  admin.py  api.py  apps.py  data_mappings.py  feeds.py  models.py  scrape_intel_ark.py  tasks.py  tests.py  urls.py  views.py
intel/management/commands/: product_ids.py  scrape_cpus.py  scrape_filter_data.py
intel/migrations/: 0001_initial.py  0002_processor_historicalprocessor.py  0003_remove_historicalprocessor_id_remove_processor_id_and_more.py  0004_remove_historicalprocessor_l3_cache_and_more.py  0005_historicalprocessor_hardware_shield_and_more.py  0006_alter_historicalprocessor_options_and_more.py  0007_alter_processor_options_and_more.py  0008_alter_arkfilterdata_options.py  0009_alter_historicalprocessor_base_frequency_and_more.py  0010_historicalprocessor_digital_thermal_sensor_temperature_max_and_more.py  0011_alter_historicalprocessor_max_memory_bandwidth_and_more.py  0012_alter_historicalprocessor_turbo_boost_2_0_frequency_and_more.py  0013_alter_historicalprocessor_max_memory_speed_and_more.py  0014_historicalprocessor_deep_learning_boost_version_and_more.py  0015_alter_historicalprocessor_thermal_velocity_boost_frequency_and_more.py  0016_alter_historicalprocessor_maximum_enclave_size_for_sgx_and_more.py  0017_rename_maximum_turbo_power_historicalprocessor_max_turbo_power_and_more.py  0018_historicalprocessor_slug_processor_slug_and_more.py  0019_alter_historicalprocessor_slug_alter_processor_slug.py  0020_alter_historicalprocessor_name_alter_processor_name.py
main/: hugo.toml
main/content/: _index.md  about.md  api.md  bot-ip-list.txt
main/content/stores/webhallen/: _index.md  sections.md
main/layouts/: 404.html  index.html
main/layouts/_default/: baseof.html  list.html  rss.xml  single.html  terms.html
main/layouts/partials/: footer.html  navbar.html
main/layouts/products/: list.html  single.html
main/prebuild/: config.yaml
main/prebuild/layouts/: index.html
nginx/: nginx.conf
pages/: apps.py  hugo.toml  tests.py  urls.py  views.py
pages/content/: about.md  donate.md
pages/content/stores/: _index.md
pages/content/stores/webhallen/: _index.md  sections.md
pages/layouts/: index.html
pages/layouts/_default/: baseof.html  list.html
pages/static/: manifest.webmanifest
pages/templates/pages/: base.html  footer.html  index.html  navbar.html
panso/: api.py  celery_app.py  settings.py  sitemaps.py  tests.py  urls.py  wsgi.py
products/: admin.py  api.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
products/management/commands/: __init__.py  add_eans.py
products/migrations/: 0001_initial.py  0002_delete_eans_delete_historicaleans.py  0003_initial.py
products/templates/products/: base.html  index.html
static/: style.css
templates/: api.html  base.html  contact.html  index.html  privacy.html  terms.html
templates/intel/: index.html  processor.html  processors.html
templates/products/: navbar.html
templates/webhallen/: index.html  products.html
webhallen/: admin.py  api.py  apps.py  models.py  package-lock.json  package.json  schema.sql  tasks.py  tests.py  urls.py  views.py  wrangler.toml
webhallen/management/commands/: add_eans.py  add_sections.py  rewrite_webhallen.py  scrape_sitemaps.py  scrape_webhallen.py
webhallen/migrations/: 0001_initial.py  0002_alter_sitemaparticle_options_and_more.py  0002_remove_historicalwebhallenproduct_history_user_and_more.py  0003_delete_eans_delete_historicaleans.py
webhallen/models/: __init__.py  eans.py  json.py  section.py  sitemaps.py
webhallen/src/: index.ts
webhallen/templates/webhallen/: index.html  products.html
