[tool.poetry]
name = "api"
version = "0.1.0"
description = "The API for the Panso.se project"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
hypercorn = "^0.15.0"
sqlmodel = "^0.0.11"
loguru = "^0.7.2"
email-validator = "^2.1.0.post1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
fix = true
unsafe-fixes = true
preview = true
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "CPY001",
    "ERA001",
    "TD002",
    "FIX002",
    "COM812",
    "ISC001",
]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
